# Progetto-SOL

./: test.c
Progetto/: makefile
Progetto/includes/: farm.h  orderedrecordlist.h  syncqueue.h  utils.h  workerpool.h
Progetto/source/: collector.c  master.c  sckset.c  stringlist.c  utils.c  workerpool.c
ProjectSOL/: CMakeLists.txt  collector.c  master.c  orderedrecordlist.c  sckset.h  stringlist.h  syncqueue.c
ProjectSOL/test.dSYM/Contents/Resources/DWARF/: test
